src/test/ui/recursion_limit/overflow.stderr
error: `recursion_limit` must be a non-negative integer
  --> $DIR/overflow.rs:3:1
   |
LL | #![recursion_limit = "999999999999999999999999"]
   | ^^^^^^^^^^^^^^^^^^^^^--------------------------^
   |                      |
   |                      `recursion_limit` is too large

error: aborting due to previous error

